<resources>
    <string name="app_name">软酷e贷</string>
    <string name="tab_home">首页</string>
    <string name="tab_orders">订单</string>
    <string name="tab_account">个人中心</string>
    <string name="settings_label">设置</string>
    <string name="login_label">登录</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_text">请登录</string>
    <string name="nav_item1">首页</string>
    <string name="nav_item2">全部订单</string>
    <string name="nav_item3">待还款</string>
    <string name="nav_item4">申请中</string>
    <string name="nav_item5">已完成</string>
    <string name="nav_group_settings">设置</string>
    <string name="nav_setting_item1">系统设置</string>
    <string name="nav_setting_item2">个人资料</string>
    <string name="nav_about">关于</string>
    <string name="nav_about_item">关于我们</string>
    <string name="app_designed_by">燕山大学计算机系</string>
    <string name="title_activity_login">登录</string>
    <string name="login_user_name_hint">用户名</string>
    <string name="login_user_phone_hint">手机号</string>
    <string name="login_user_name_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="error_invalid_name">用户名不合法</string>
    <string name="error_invalid_password">至少6位字符</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_no_name">请输入你的用户名</string>
    <string name="error_no_password">请输入你的密码</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_phone">请输入正确的手机号</string>
    <string name="arc_final_text_level1">信誉极好</string>
    <string name="arc_final_text_level2">信誉良好</string>
    <string name="arc_final_text_level3">信誉一般</string>
    <string name="arc_final_text_level4">信誉较差</string>
    <string name="arc_final_text_level5">信誉很差</string>
    <string name="tv_recycler_item_1">Title</string>
    <string name="tv_recycler_item_2">sub title</string>
    <string name="tv_recycler_item_3">detail</string>
    <string name="snack_bar_main_info">还未实现！</string>
    <string name="snack_bar_main_action">好吧</string>
    <string name="main_action_menu_item1">快速申请</string>
    <string name="sign_out_alert_title">注销</string>
    <string name="sign_out_alert_text">确定要注销？</string>
    <string name="dialog_ok">好</string>
    <string name="dialog_cancel">不了</string>
    <string name="header_description">欢迎使用软酷e贷</string>
    <string name="nav_header_info">username@ruanku.com</string>
    <string name="default_mail">username@ruanku.com</string>
    <string name="credit_rating">综合评估</string>
    <string name="transaction_record">交易记录</string>
    <string name="info_integrity">信息完整</string>
    <string name="help_info_title">Tips: 如何提高信誉度</string>
    <string name="help_info_content">完善个人信息; 多使用E贷借款; 按时还款，避免逾期</string>
    <string name="order_count_label">全部借款</string>
    <string name="recent_deadline_label">近期待还</string>
    <string name="total_loan_label">逾期未还</string>
    <string name="honor_label">根据您的信息估算您的信誉度为</string>
    <string name="statics_label">概览</string>
    <string name="name_label">姓名: </string>
    <string name="phone_label">手机: </string>
    <string name="mail_label">邮箱: </string>
    <string name="school_label">学校: </string>
    <string name="credit_label">信用评级: </string>
    <string name="info_integrity_label">资料完整度: </string>
    <string name="apply_label">申请借款</string>
    <string name="user_info_label">修改个人信息</string>
    <string name="repay_method">选择还款方式</string>
    <string name="pay_method">选择收款方式</string>
    <string name="submit">提交</string>
    <string name="action_apply">提交</string>
    <string name="apply_help">帮助</string>
    <string name="apply_done">申请已经提交，请等待审核！</string>
    <string name="guarantee_label">请填写担保人信息</string>
    <string name="apply_basic_label">请填写借款基本信息</string>
    <string name="apply_extra_label">请在此输入借款详细说明</string>
    <string name="repay_date">选择截止日期</string>
    <string name="title_order_detail">订单详情</string>
    <string name="crop_image_title">选择图片并裁切</string>
    <string name="upload_done">上传完成！</string>
    <string name="upload_fail">上传失败，请重试！</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_all_order">全部借款</string>
    <string name="tab_recent_order">近期待还</string>
    <string name="tab_unpassed_order">申请中</string>
    <string name="tab_passed_order">已审核</string>
    <string name="tab_finished_order">已完成</string>
    <string name="main_action_menu_item2">注销账户</string>
    <string name="tab_overdue_order">已逾期</string>
    <string name="user_info_modified">修改成功</string>
    <string name="alipay_account">a6x00993tus34lwjnovdt9c</string>
    <string name="action_repay">立即还款</string>
    <string name="action_delete_order">删除记录</string>
    <string name="action_undo_apply">撤销申请</string>
    <string name="snack_bar_undo_order">确定？撤销申请将不可恢复。</string>
    <string name="snack_bar_redo">撤销</string>
    <string name="snack_bar_confirm">确认</string>
    <string name="alipay_not_installed">未安装支付宝客户端！</string>
    <string name="snack_bar_goto_web">扫码支付</string>
    <string name="wechat_qrcode_url">http://junwen.qiniudn.com/Fg0bjJ0FeWKnWe_5l_LnZt50boLc</string>
    <string name="alipay_qrcode_url">http://junwen.qiniudn.com/Fr6azl-_m7FMI0Ur3NGqaD0zild_</string>
    <string name="dialog_goto_alipay">去支付宝</string>
    <string name="dialog_done">我已完成还款</string>
    <string name="repay_notice">扫码使用微信转账，或去支付宝客户端转账</string>
    <string name="repaid_notice">还款请求已提交，请等待审核</string>
    <string name="login_user_email_hint">电子邮箱</string>
    <string name="error_invalid_email">邮箱无效</string>
    <string name="email_verified">(已验证)</string>
    <string name="email_not_verified">(未验证)</string>
    <string name="action_request_email_verify">发送验证邮件</string>
    <string name="reset_pass_email_hint">请输入注册邮箱</string>
    <string name="dialog_send_email">发送密码重置邮件</string>
    <string name="reset_pass_notice">我们会给您发送密码重置邮件，请根据邮件内容重置密码</string>
    <string name="main_action_menu_item3">修改密码</string>
    <string name="title_activity_agreement">AgreementActivity</string>
    <string name="agreement_text">
        "尊敬的客户，欢迎您注册成为E贷用户。\n\n"
"在注册前请您仔细阅读如下服务条款\n\n"
"本服务协议双方为E贷互联网金融信息服务有限公司（以下简称“E贷”）与E贷客户，本服务协议具有合同效力。您确认本服务协议后，本服务协议即在您和E贷之间产生法律效力。请您务必在注册之前认真阅读全部服务协议内容，如有任何疑问，可向E贷咨询。 无论您事实上是否在注册之前认真阅读了本服务协议，只要您通过E贷移动设备客户端注册成为E贷用户，您的行为仍然表示您同意并签署了本服务协议。\n\n"
"协议细则\n"
"1、E贷服务条款的确认和接纳\n"
"E贷各项服务的所有权和运作权归E贷拥有。\n"
"2、您必须：\n"
"(1)自行配备上网的所需设备， 包括个人电脑、调制解调器或其他必备上网装置。\n"
"(2)自行负担个人上网所支付的与此服务有关的电话费用、 网络费用。\n"
"3、您在E贷交易平台上不得发布下列违法信息：\n"
"(1)反对宪法所确定的基本原则的；\n"
"(2)危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n"
"(3)损害国家荣誉和利益的；\n"
"(4)煽动民族仇恨、民族歧视，破坏民族团结的；\n"
"(5)破坏国家宗教政策，宣扬邪教和封建迷信的；\n"
"(6)散布谣言，扰乱社会秩序，破坏社会稳定的；\n"
"(7)散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；\n"
"(8)侮辱或者诽谤他人，侵害他人合法权益的；\n"
"(9)含有法律、行政法规禁止的其他内容的。\n"
"4、有关个人资料\n"
"您同意：\n"
"(1) 提供及时、详尽及准确的个人资料。\n"
"(2).同意接收来自E贷的信息。\n"
"(3) 不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将引用为注册资料。\n"
"5、电子邮件\n"
"您在注册时应当选择稳定性及安全性相对较好的电子邮箱，并且同意接受并阅读E贷发往您的各类电子邮件。如您未及时从自己的电子邮箱接受电子邮件或因您的电子邮箱或您的电子邮件接收及阅读程序本身的问题使电子邮件无法正常接收或阅读的，只要E贷成功发送了电子邮件，应当视为您已经接收到相关的电子邮件。电子邮件在发信服务器上所记录的发出时间视为送达时间。\n"
"6、服务条款的修改\n"
"E贷有权在必要时修改服务条款，E贷服务条款一旦发生变动，将会在重要页面上提示修改内容。如果不同意所改动的内容，您可以主动取消获得的E贷信息服务。如果您继续享用E贷信息服务，则视为接受服务条款的变动。E贷保留随时修改或中断服务而不需通知用户的权利。E贷行使修改或中断服务的权利，不需对用户或第三方负责。\n"
"7、用户的帐号、密码和安全性\n"
"您一旦注册成功成为用户，您将得到一个密码和帐号。如果您不保管好自己的帐号和密码安全，将负全部责任。另外，每个用户都要对其帐户中的所有活动和事件负全责。您可随时根据指示改变您的密码，原则上每个用户只允许开设一个E贷账户。用户同意若发现任何非法使用用户帐号或安全漏洞的情况，请立即通知E贷。\n"
"8、拒绝提供担保\n"
"您明确同意信息服务的使用由您个人承担风险。E贷不担保服务不会受中断，对服务的及时性，安全性，出错发生都不作担保，但会在能力范围内，避免出错。\n"
"9、有限责任\n"
"E贷对任何直接、间接、偶然、特殊及继起的损害不负责任，这些损害来自：不正当使用E贷服务，或用户传送的信息不符合规定等。这些行为都有可能导致E贷形象受损，所以E贷事先提出这种损害的可能性，同时会尽量避免这种损害的发生。\n"
"10、信息的储存及限制\n"
"E贷有判定您的行为是否符合E贷服务条款的要求和精神的权利，如果您违背E贷服务条款的规定，E贷有权中断其服务的帐号。\n"
"11、用户管理\n"
"您必须遵循：\n"
"(1) 使用信息服务不作非法用途。\n"
"(2) 不干扰或混乱网络服务。\n"
"(3) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。\n"
"(4) 个人会员同意，E贷有权在提供E贷服务过程中以各种方式投放各种商业性广告或其他任何类型的商业信息（包括但不限于在E贷平台的任何页面上投放广告），并且，个人会员同意接受E贷通过短信或其他方式向个人会员发送商品促销或其他相关商业信息。\n"
"12、保障\n"
"您同意保障和维护E贷全体成员的利益，负责支付由您使用超出服务范围引起的律师费用，违反服务条款的损害补偿费用，其它人使用您的电脑、帐号和其它知识产权的追索费。\n"
"13、结束服务\n"
"您或E贷可随时根据实际情况中断一项或多项服务。E贷不需对任何个人或第三方负责而随时中断服务。您若反对任何服务条款的建议或对后来的条款修改有异议，或对E贷服务不满，您可以行使如下权利：\n"
"(1) 不再使用E贷信息服务。\n"
"(2) 通知E贷停止对您的服务。\n"
"E贷结束对您的服务后，您使用E贷服务的权利马上中止。从那时起，您没有权利，E贷也没有义务传送任何未处理的信息或未完成的服务给您或第三方。\n"
"14、通告\n"
"所有发给您的通告都可通过重要页面的公告或电子邮件或常规的信件传送。服务条款的修改、服务变更、或其它重要事件的通告都会以此形式进行。\n"
"15、信息内容的所有权\n"
"E贷定义的信息内容包括：文字、软件、声音、相片、录象、图表；在广告中全部内容；E贷为您提供的其它信息。所有这些内容受版权、商标、标签和其它财产所有权法律的保护。所以，您只能在E贷和广告商授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。\n"
"16、法律\n"
"E贷信息服务条款要与中华人民共和国的法律解释一致。您和E贷一致同意服从E贷所在地有管辖权的法院管辖。\n"
"17、用户信息及隐私权保护\n"
"1）用户信息的提供、搜集及核实\n"
"您有义务在注册时提供自己的真实资料，并保证诸如电子邮件地址、联系电话、联系地址、邮政编码等内容的有效性、安全性和及时更新，以便E贷为您提供服务并与您进行及时、有效的联系。您应完全独自承担因通过这些联系方式无法与您取得联系而导致的您在使用本服务过程中遭受的任何损失或增加任何费用等不利后果。\n"
"E贷可能自公开及私人资料来源收集您的额外资料，以更好地了解E贷用户，并为其度身订造E贷服务、解决争议和确保在网站进行交易的安全性。E贷仅收集E贷认为就此目的及达成该目的所必须的关于您的个人资料。\n"
"您同意E贷可以自行或通过合作的第三方机构对您提交或E贷搜集的用户信息（包括但不限于您的个人身份证信息等）进行核实，并对获得的核实结果根据本协议及有关文件进行查看、使用和留存等操作。\n"
"E贷按照您在E贷上的行为自动追踪关于您的某些资料。E贷利用这些资料进行有关E贷之用户的人口统计、兴趣及行为的内部研究，以更好地了解您以便向您和E贷的其他用户提供更好的服务。\n"
"E贷在E贷的某些网页上使用诸如“Cookies”的资料收集装置。“Cookies”是设置在您的硬盘上的小档案，以协助E贷为您提供度身订造的服务。E贷亦提供某些只能通过使用“Cookies”才可得到的功能。E贷还利用“Cookies”使您能够在某段期间内减少输入密码的次数。“Cookies”还可以协助E贷提供专门针对您的兴趣而提供的资料。\n"
"如果您将个人通讯信息（例如：手机短信、电邮或信件）交付给E贷，或如果其他用户或第三方向E贷发出关于您在E贷上的活动或登录事项的通讯信息，E贷可以将这些资料收集在您的专门档案中。\n"
"2）用户信息的使用和披露\n"
"您同意E贷可使用关于您的个人资料（包括但不限于E贷持有的有关您的档案中的资料，及E贷从您目前及以前在E贷上的活动所获取的其他资料）以解决争议、对纠纷进行调停、确保在E贷进行安全交易，并执行E贷的服务协议及相关规则。E贷有时候可能调查多个用户以识别问题或解决争议，特别是E贷可审查您的资料以区分使用多个用户名或别名的用户。为限制在网站上的欺诈、非法或其他刑事犯罪活动，使E贷免受其害，您同意E贷可通过人工或自动程序对您的个人资料进行评价。\n"
"您同意E贷可以使用您的个人资料以改进E贷的推广和促销工作、分析网站的使用率、改善E贷的内容和产品推广形式，并使E贷的网站内容、设计和服务更能符合用户的要求。这些使用能改善E贷的网页，以调整E贷的网页使其更能符合您的需求，从而使您在使用E贷服务时得到更为顺利、有效、安全及度身订造的交易体验。\n"
"您同意E贷利用您的资料与您联络并（在某些情况下）向您传递针对您的兴趣而提供的信息，例如：有针对性的广告条、行政管理方面的通知、产品提供以及有关您使用E贷的通讯。您接受本协议即视为您同意收取这些资料。\n"
"您注册成功后应妥善保管您的用户名和密码。您确认，无论是您还是您的代理人，用您的用户名和密码登录E贷后在E贷的一切行为均代表您并由您承担相应的法律后果。\n"
"E贷对于您提供的、自行收集到的、经认证的个人信息将按照本协议及有关规则予以保护、使用或者披露。E贷将采用行业标准惯例以保护您的个人资料，但鉴于技术限制，E贷不能确保您的全部私人通讯及其他个人资料不会通过本协议中未列明的途径泄露出去。\n"
"您使用E贷服务进行交易时，为便于E贷核查您的的个人信息、信用情况、风险承受能力等促成交易的必要信息，以及便于E贷协助进行催收等履行必要义务，您在此不可撤销地授权E贷将您的个人信息以及交易信息等必要信息提供给E贷合作的第三方征信平台（如芝麻信用、前海征信、鹏元征信、考拉征信等）、E贷合作的其他大数据信息核查以及反欺诈核查公司、E贷合作方委托的第三方催收公司、律师事务所等 。\n"
"E贷有义务根据有关法律要求向司法机关和政府部门提供您的个人资料。在您未能按照与本协议、E贷有关规则或者与E贷其他用户签订的有关协议的约定履行自己应尽的义务时（包括但不限于当您作为借款人借款逾期或有其他违约时），E贷有权根据自己的判断、有关协议和规则、国家生效裁决文书或者与该笔交易有关的其他用户的合理请求披露您的个人资料（包括但不限于在E贷及互联网络上公布您的违法、违约行为，并有关将该内容记入任何与您相关的信用资料、档案或数据库），并且作为出借人的其他用户可以采取发布您的个人信息的方式追索债权或通过司法部门要求E贷提供相关资料，E贷对此不承担任何责任。\n"
"3）您对其他用户信息的使用\n"
"在E贷提供的交易活动中，您无权要求E贷提供其他用户的个人资料，除非符合以下条件：\n"
"（1） 您已向法院起诉其他用户的在E贷活动中的违约行为；\n"
"（2） 与您有关的其他用户逾期未归还借款本息；\n"
"（3） E贷被吊销营业执照、解散、清算、宣告破产或者其他有碍于您收回借款本息的情形。\n"
"如您通过签署有关协议等方式获得其他用户的个人信息，您同意不将该等个人信息用于除还本付息或向借款人追索债权以外的其他任何用途，除非该等信息根据适用的法律规定、被有管辖权的法院或政府部门要求披露。\n"
    </string>
</resources>