<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/google_assistant_background"
    android:paddingEnd="@dimen/zero_horizontal_margin"
    android:paddingStart="@dimen/zero_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:paddingLeft="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/repay_notice"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <RelativeLayout
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/img_bottom_dialog"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_dialog_bottom_sheet_ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/dialog_goto_alipay"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn_dialog_bottom_sheet_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_dialog_bottom_sheet_ok"
                android:text="@string/dialog_done"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>