<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/statics_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16sp" />

        <RelativeLayout
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_label1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/order_count_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:paddingTop="@dimen/card_margin_vertical"
                    android:layout_below="@id/tv_label1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView

                    android:id="@+id/tv_label2"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/recent_deadline_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:paddingTop="@dimen/card_margin_vertical"
                    android:layout_below="@id/tv_label2"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="￥5000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_label3"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/total_loan_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:paddingTop="@dimen/card_margin_vertical"
                    android:layout_below="@id/tv_label3"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="￥15000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </RelativeLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/card_title_margin"
            android:background="@color/gray_light" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_title_margin_top"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/honor_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:paddingLeft="@dimen/arc_margin"
            android:paddingRight="@dimen/arc_margin">

            <TextView
                android:id="@+id/tv_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_below_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingTop="56dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <com.hookedonplay.decoviewlib.DecoView xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dynamicArcView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12.2dp"
                custom:dv_lineWidth="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="46dp"
            android:paddingRight="46dp">
            <RelativeLayout
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginBottom="@dimen/card_button_margin"
                    android:id="@+id/textActivity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/credit_rating"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <ImageView
                    android:layout_below="@id/textActivity1"
                    android:id="@+id/imageActivity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_activity1"
                    android:padding="12dp"
                    android:src="@drawable/ic_credit_card_black_24dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginBottom="@dimen/card_button_margin"
                    android:id="@+id/textActivity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/transaction_record"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                <ImageView
                    android:layout_below="@id/textActivity2"
                    android:id="@+id/imageActivity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_activity2"
                    android:padding="12dp"
                    android:src="@drawable/ic_cached_black_24dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginBottom="@dimen/card_button_margin"
                    android:id="@+id/textActivity3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_integrity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <ImageView
                    android:layout_below="@id/textActivity3"
                    android:id="@+id/imageActivity3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_activity3"
                    android:padding="12dp"
                    android:src="@drawable/ic_face_black_24dp" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_info_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/help_info_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </LinearLayout>



    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
